# serializer version: 1
# name: test_form
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'api_key',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': None,
    'errors': dict({
    }),
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_form.1
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': 'test-api-key',
    }),
    'data': dict({
      'api_key': 'test-api-key',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'api_key': 'test-api-key',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'liebherr',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Liebherr',
      'unique_id': 'test-api-key',
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'Liebherr',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_form_already_configured
  FlowResultSnapshot({
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'reason': 'already_configured',
    'type': <FlowResultType.ABORT: 'abort'>,
  })
# ---
# name: test_form_errors_with_recovery[side_effect0-invalid_auth]
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'api_key',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': None,
    'errors': dict({
      'base': 'invalid_auth',
    }),
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_form_errors_with_recovery[side_effect0-invalid_auth].1
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': 'test-api-key',
    }),
    'data': dict({
      'api_key': 'test-api-key',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'api_key': 'test-api-key',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'liebherr',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Liebherr',
      'unique_id': 'test-api-key',
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'Liebherr',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_form_errors_with_recovery[side_effect1-cannot_connect]
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'api_key',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': None,
    'errors': dict({
      'base': 'cannot_connect',
    }),
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_form_errors_with_recovery[side_effect1-cannot_connect].1
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': 'test-api-key',
    }),
    'data': dict({
      'api_key': 'test-api-key',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'api_key': 'test-api-key',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'liebherr',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Liebherr',
      'unique_id': 'test-api-key',
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'Liebherr',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_form_errors_with_recovery[side_effect2-unknown]
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'api_key',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': None,
    'errors': dict({
      'base': 'unknown',
    }),
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
# name: test_form_errors_with_recovery[side_effect2-unknown].1
  FlowResultSnapshot({
    'context': dict({
      'source': 'user',
      'unique_id': 'test-api-key',
    }),
    'data': dict({
      'api_key': 'test-api-key',
    }),
    'description': None,
    'description_placeholders': None,
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'minor_version': 1,
    'options': dict({
    }),
    'result': ConfigEntrySnapshot({
      'data': dict({
        'api_key': 'test-api-key',
      }),
      'disabled_by': None,
      'discovery_keys': dict({
      }),
      'domain': 'liebherr',
      'entry_id': <ANY>,
      'minor_version': 1,
      'options': dict({
      }),
      'pref_disable_new_entities': False,
      'pref_disable_polling': False,
      'source': 'user',
      'subentries': list([
      ]),
      'title': 'Liebherr',
      'unique_id': 'test-api-key',
      'version': 1,
    }),
    'subentries': tuple(
    ),
    'title': 'Liebherr',
    'type': <FlowResultType.CREATE_ENTRY: 'create_entry'>,
    'version': 1,
  })
# ---
# name: test_form_no_devices
  FlowResultSnapshot({
    'data_schema': list([
      dict({
        'name': 'api_key',
        'required': True,
        'type': 'string',
      }),
    ]),
    'description_placeholders': None,
    'errors': dict({
      'base': 'no_devices',
    }),
    'flow_id': <ANY>,
    'handler': 'liebherr',
    'last_step': None,
    'preview': None,
    'step_id': 'user',
    'type': <FlowResultType.FORM: 'form'>,
  })
# ---
